# generate-relations-data

./: CMakeLists.txt  README.md  build.sh  config.ini  datasets.ini  find_relation.sh  main.cpp  relate.sh  scalability.sh  setup_experiments.sh
APRIL/: CMakeLists.txt
APRIL/include/: controller.h  storage.h  topology.h
APRIL/src/: controller.cpp  storage.cpp  topology.cpp
Rasterizer/: CMakeLists.txt
SpatialLib/: CMakeLists.txt
SpatialLib/include/: data.h  def.h
SpatialLib/src/: def.cpp  refinement.cpp
TwoLayerFilter/src/: controller.cpp  filter.cpp
data/APRIL/: readme.txt
data/vector_data/: readme.txt
include/: config.h  def.h  parsing.h  utils.h
libvbyte-master/: CMakeLists.txt  __Makefile  custom_benchmark  vbyte.cc  vbyte.h
src/: config.cpp  parsing.cpp  utils.cpp
